--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node dev-server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -12,10 +12,13 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "canvas-confetti": "^1.9.4",
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
     "framer-motion": "^12.28.1",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "mongoose": "^8.23.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
